--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,8 @@
                         <div class="mdl-card__supporting-text">
                                 <form action="#">
                                     <div class="mdl-textfield mdl-js-textfield">
-                                        <input class="mdl-textfield__input" type="text" id="username" />
-                                        <label class="mdl-textfield__label" for="username">Username</label>
+                                        <input class="mdl-textfield__input" type="text" id="email" />
+                                        <label class="mdl-textfield__label" for="username">Email</label>
                                     </div>
                                     <div class="mdl-textfield mdl-js-textfield">
                                         <input class="mdl-textfield__input" type="password" id="userpass" />
